[project]
name = "nhtsa-scraper"
version = "0.1.0"
description = "Scraper for NHTSA vehicle data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "httpx>=0.28.1",
    "polars>=1.27.1",
    "pydantic>=2.11.3",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
]
